# agdev

./: .gitignore
agdev/: helmfile.yaml
agdev/fluent/: values.yaml
agdev/planka/: values.yaml
services/event/: Dockerfile  go.mod  main.go
services/music-analysis/: main.py
services/music-caption/: main.py  pyproject.toml
services/obsolete/music-analysis/: Dockerfile  requirements.txt
services/repository/: main.py  requirements.txt
services/repository_old/: Dockerfile
services/task-manager/: main.py  requirements.txt
test/: kind.yaml
