[tool.poetry]
name = "music-caption"
version = "0.1.10"
description = "For Music Caption"
authors = ["iwaag"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.3"
jupyter = "^1.0.0"
openpyxl = "^3.1.2"
llvmlite = "^0.43.0"
numba = "^0.60.0"
torchlibrosa = "^0.1.0"
h5py = "^3.9.0"
deepdiff = "^6.3.1"
pytest = "^7.4.0"
setuptools = "^68.1.2"
wandb = "^0.15.8"
matplotlib = "^3.7.2"
transformers = "^4.33.1"
torchaudio = "^2.0.2"
pytorch-lightning = "^2.0.9"
spacy = "^3.7.1"
python-dotenv = "^1.0.0"
bert-score = "^0.3.13"
numpy = "^2.0.1"
torchvision = "^0.19.0"
debugpy = "^1.8.7"
fastAPI = "*"
uvicorn = "*"
python-multipart = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
